--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,10 @@
         "laravel/framework": ">=5.1 <=5.5"
     },
 
+    "require-dev": {
+        "orchestra/testbench": "~3.0"
+    },
+
     "autoload": {
         "psr-4": {
             "Tequilarapido\\RobotsTxt\\": "src"
